--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -33,8 +33,7 @@ body {
   // Try to prevent a vertical scroll bar.
   height: 100%;
   margin: 0;
-  // Leave padding on the right in case there's a scroll bar (it obscures text on later IE).
-  padding: 0 0 0 0;
+  padding: 0;
   overflow-y: hidden;
 }
 
